[tool.poetry]
name = "calibration-fetcher-2"
version = "0.1.0"
description = "Browser automation script for fetching quantum calibration data"
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
license = "GPL3+"
readme = "README.org"
packages = [{include = "calibration_fetcher_2"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
selenium = "^4.9.0"
pygraphviz = "^1.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
